--- a/main.css
+++ b/main.css
@@ -132,6 +132,7 @@ img.imgLogo {
   border-radius: 16px;
   border: 2px solid #FEDF18;
   margin-top: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 /* Styling for the subnavigasi links */
