--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ img.imgLogo {
 
 /* Styling for the subnavigasi links */
 .subnavigasiLinks {
-  display: block;
+  display: none;
   padding: 10px;
   text-decoration: none;
   color: #202020;
@@ -146,13 +146,15 @@ img.imgLogo {
 
 /* Show mega menu on hover and keep it open when moving towards it */
 .wrapperSubmenu:hover .megaMenu,
-.megaMenu:hover {
+.megaMenu:hover
+.subnavigasiLinks:hover .megaMenu{
   display: block;
   opacity: 1;
 }
 
 /* Hide mega menu when not hovering over the submenu or mega menu */
-.wrapperSubmenu:not(:hover) .megaMenu {
+.wrapperSubmenu:not(:hover) .megaMenu,
+.subnavigasiLinks:not(:hover) .megaMenu{
   display: none;
   opacity: 0;
 }
