--- a/main.css
+++ b/main.css
@@ -157,6 +157,24 @@ img.imgLogo {
   opacity: 0;
 }
 
+a.subnavigasiLinks {
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+}
+
+a.subnavigasiLinks:hover,
+a.subnavigasiLinks:focus,
+a.subnavigasiLinks:active
+{
+  background-color:#FEDF18;
+  border-radius:16px;
+}
+
+body.dark-mode .megaMenu{
+  background-color:#202020!important;
+  color:white!important;
+}
+
 .mainButtons {
     box-shadow: 0px 8px 0px 0px #393939 !important;
     -webkit-box-shadow: 0px 8px 0px 0px #393939 !important;
