--- a/main.css
+++ b/main.css
@@ -176,7 +176,7 @@ body.dark-mode .megaMenu{
 }
 
 body.dark-mode a.subnavigasiLinks{
-  color:white!important;
+  color:#202020!important;
 }
 
 .mainButtons {
